* reload1.c (reload_cse_move2add): Honor TRULY_NOOP_TRUNCATION.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34106 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue May 23 18:11:42 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* reload1.c (reload_cse_move2add): Honor TRULY_NOOP_TRUNCATION.
+
 2000-05-23  Jonathan Larmour  <jlarmour@redhat.co.uk>
 
 	* config/mips/elf64.h (CTOR_LISTS_DEFINED_EXTERNALLY): Define
