--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2000-05-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* aclocal.m4 (gcc_AC_CHECK_DECL, gcc_AC_CHECK_DECLS): New macros
+	rewritten from the internals of gcc_AC_NEED_DECLARATION{S}.
+	
+	* configure.in (gcc_AC_CHECK_DECLS): Call this instead of
+	gcc_AC_NEED_DECLARATIONS.
+
+	* dwarfout.c: Don't prototype time().
+
+	* gcc.c: Check HAVE_DECL_* instead of NEED_DECLARATION_*.
+
+	* system.h: Likewise.
+
+	* toplev.c: Likewise.
+
 2000-05-23  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* c-decl.c (pushdecl): Invert sense of test for non-global types.
