--- a/gcc/invoke.texi
+++ b/gcc/invoke.texi
@@ -2216,20 +2216,20 @@ block and arc execution counts from the information in the
 Says to make debugging dumps during compilation at times specified by
 @var{letters}.  This is used for debugging the compiler.  The file names
 for most of the dumps are made by appending a pass number and a word to
-the source file name (e.g.  @file{foo.c.00.rtl} or @file{foo.c.01.jump}). 
+the source file name (e.g.  @file{foo.c.00.rtl} or @file{foo.c.01.sibling}). 
 Here are the possible letters for use in @var{letters}, and their meanings:
 
 @table @samp
 @item A
 Annotate the assembler output with miscellaneous debugging information.
 @item b
-Dump after computing branch probabilities, to @file{@var{file}.10.bp}.
+Dump after computing branch probabilities, to @file{@var{file}.11.bp}.
 @item B
-Dump after block reordering, to @file{@var{file}.20.bbro}.
+Dump after block reordering, to @file{@var{file}.24.bbro}.
 @item c
-Dump after instruction combination, to the file @file{@var{file}.12.combine}.
+Dump after instruction combination, to the file @file{@var{file}.13.combine}.
 @item d
-Dump after delayed branch scheduling, to @file{@var{file}.24.dbr}.
+Dump after delayed branch scheduling, to @file{@var{file}.27.dbr}.
 @item D
 Dump all macro definitions, at the end of preprocessing, in addition to
 normal output.
@@ -2237,11 +2237,11 @@ normal output.
 Dump after SSA optimizations, to @file{@var{file}.05.ssa} and
 @file{@var{file}.06.ussa}.
 @item f
-Dump after flow analysis, to @file{@var{file}.11.flow}.
+Dump after life analysis, to @file{@var{file}.12.life}.
 @item F
 Dump after purging @code{ADDRESSOF} codes, to @file{@var{file}.04.addressof}.
 @item g
-Dump after global register allocation, to @file{@var{file}.16.greg}.
+Dump after global register allocation, to @file{@var{file}.18.greg}.
 @item G      
 Dump after GCSE, to @file{@var{file}.07.gcse}.
 @item i
@@ -2249,38 +2249,38 @@ Dump after sibling call optimizations, to @file{@var{file}.01.sibling}.
 @item j
 Dump after first jump optimization, to @file{@var{file}.02.jump}.
 @item J
-Dump after last jump optimization, to @file{@var{file}.22.jump2}.
+Dump after last jump optimization, to @file{@var{file}.25.jump2}.
 @item k
-Dump after conversion from registers to stack, to @file{@var{file}.25.stack}.
+Dump after conversion from registers to stack, to @file{@var{file}.28.stack}.
 @item l
-Dump after local register allocation, to @file{@var{file}.15.lreg}.
+Dump after local register allocation, to @file{@var{file}.17.lreg}.
 @item L
 Dump after loop optimization, to @file{@var{file}.08.loop}.
 @item M
 Dump after performing the machine dependent reorganisation pass, to
-@file{@var{file}.23.mach}. 
+@file{@var{file}.26.mach}. 
 @item n
-Dump after register renumbering, to @file{@var{file}.21.rnreg}.
+Dump after register renumbering, to @file{@var{file}.22.rnreg}.
 @item N
-Dump after the register move pass, to @file{@var{file}.13.regmove}.
+Dump after the register move pass, to @file{@var{file}.15.regmove}.
 @item r
 Dump after RTL generation, to @file{@var{file}.00.rtl}.
 @item R
 Dump after the second instruction scheduling pass, to
-@file{@var{file}.19.sched2}.
+@file{@var{file}.239.sched2}.
 @item s
 Dump after CSE (including the jump optimization that sometimes follows
 CSE), to @file{@var{file}.03.cse}. 
 @item S
 Dump after the first instruction scheduling pass, to
-@file{@var{file}.14.sched}.
+@file{@var{file}.16.sched}.
 @item t
 Dump after the second CSE pass (including the jump optimization that
 sometimes follows CSE), to @file{@var{file}.09.cse2}.
 @item w
-Dump after the second flow pass, to @file{@var{file}.17.flow2}.
+Dump after the second flow pass, to @file{@var{file}.19.flow2}.
 @item z
-Dump after the peephold pass, to @file{@var{file}.18.peephole2}.
+Dump after the peephole pass, to @file{@var{file}.21.peephole2}.
 @item a
 Produce all the dumps listed above.
 @item m
@@ -2295,14 +2295,14 @@ For each of the other indicated dump files (except for
 @file{@var{file}.00.rtl}), dump a representation of the control flow graph
 suitible for viewing with VCG to @file{@var{file}.@var{pass}.vcg}.
 @item w
-Dump after the second flow pass to @file{@var{file}.14.flow2}. 
+Dump after the second flow pass to @file{@var{file}.19.flow2}. 
 @item x
 Just generate RTL for a function instead of compiling it.  Usually used
 with @samp{r}.
 @item y
 Dump debugging information during parsing, to standard error.
 @item z
-Dump after the peephole2 pass to @file{@var{file}.15.peephole2}.
+Dump after the peephole2 pass to @file{@var{file}.21.peephole2}.
 @end table
 
 @item -fdump-unnumbered
