* libjava.lang/stringconst.out: New file. 	* libjava.lang/stringconst.java: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34115 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-23  Tom Tromey  <tromey@cygnus.com>
+
+	* libjava.lang/stringconst.out: New file.
+	* libjava.lang/stringconst.java: New file.
+
 2000-05-22  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* libjava.compile/PR232B.java: Additional PR gcj/232 test.
