* libjava.compile/PR238.java: New file.  For PR gcj/238.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34116 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-23  Tom Tromey  <tromey@cygnus.com>
 
+	* libjava.compile/PR238.java: New file.  For PR gcj/238.
+
 	* libjava.lang/stringconst.out: New file.
 	* libjava.lang/stringconst.java: New file.
 
