--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-23  Mike Stump  <mrs@wrs.com>
+
+	* Makefile.in (xmalloc.o): Add dependency for config.h, fixes make
+ 	-j3.
+
 2000-05-18  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* xmalloc.c: Include config.h for HAVE_SBRK definition.
