* emit-rtl.c (unshare_all_decls): New function. (unshare_all_rtl): Call it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34118 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-24  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* emit-rtl.c (unshare_all_decls): New function.
+	(unshare_all_rtl): Call it.
+
 2000-05-23  Nick Clifton  <nickc@cygnus.com>
 
 	* configure.in: Treat 'strongarm' as if it were 'arm' when
