* iostream.cc (endl): Verify stream can accept characters         before writing its eol.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34122 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libio/ChangeLog
+++ b/libio/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 23 22:56:56 2000  Jerry Quinn
+
+	* iostream.cc (endl): Verify stream can accept characters
+	before writing its eol.
+
 2000-05-15  David Edelsohn  <edelsohn@gnu.org>
 
 	* config.shared: Change "pic" to depend on $(PICFLAG), not
