--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-24  Andreas Jaeger  <aj@suse.de>
+
+	* mips.h (LINKER_ENDIAN_SPEC): Pass -EL to linker by default.
+
 2000-05-24  Eric Christopher <echristo@cygnus.com>
 
 	* configure.in: Redefine inhibit_libc conditions.
