* init.c (sort_member_init): Fix typo in error message generation 	code.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34134 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-24  Mark Mitchell  <mark@codesourcery.com>
+
+	* init.c (sort_member_init): Fix typo in error message generation
+	code.
+
 2000-05-24  Nathan Sidwell  <nathan@codesourcery.com>
 
 	Update new-abi upcast algorithm.
