* java/io/ObjectOutputStream.java (writeObject): Use component type 	when writing arrays. 	Fixed typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34142 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-24  Warren Levy  <warrenl@cygnus.com>
+
+	* java/io/ObjectOutputStream.java (writeObject): Use component type
+	when writing arrays.
+	Fixed typo.
+
 2000-05-20  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	Fix for PR libgcj/226:
