* loop.c (basic_induction_var): Avoid double recording of an increment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34153 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu May 25 02:27:22 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* loop.c (basic_induction_var): Avoid double recording of an increment.
+
 Thu May 25 02:19:27 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* Back out this patch:
