* recog.c (offsettable_address_p): If mode size is zero, assume         BIGGEST_ALIGNMENT.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34158 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-24  Richard Henderson  <rth@cygnus.com>
+
+	* recog.c (offsettable_address_p): If mode size is zero, assume
+	BIGGEST_ALIGNMENT.
+
 2000-05-24  J. David Anglin  <dave@hiauly.hia.nrc.ca>
 
 	* configure.in: Check for -Wno-long-long option support and improve
